// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button(snapshot testing) Button sizes 1`] = `
<button
  class="sc-fjdhpX eSQbxg"
  data-styletype="primary"
  data-test="button"
  type="submit"
>
  <span
    class="sc-htoDjs jbxVbw"
    color="white"
    data-test="span"
    size="10"
  >
    my small button
  </span>
</button>
`;

exports[`Button(snapshot testing) Button sizes 2`] = `
<button
  class="sc-fjdhpX gRhpjK"
  data-styletype="primary"
  data-test="button"
  type="submit"
>
  <span
    class="sc-htoDjs cemEaf"
    color="white"
    data-test="span"
    size="14"
  >
    my default size(md) button
  </span>
</button>
`;

exports[`Button(snapshot testing) Button sizes 3`] = `
<button
  class="sc-fjdhpX hBeRHQ"
  data-styletype="primary"
  data-test="button"
  type="submit"
>
  <span
    class="sc-htoDjs doVAst"
    color="white"
    data-test="span"
    size="20"
  >
    my large button
  </span>
</button>
`;

exports[`Button(snapshot testing) Button-default 1`] = `
<button
  class="sc-fjdhpX gRhpjK"
  data-styletype="primary"
  data-test="button"
  type="submit"
>
  <span
    class="sc-htoDjs cemEaf"
    color="white"
    data-test="span"
    size="14"
  >
    my simple button
  </span>
</button>
`;

exports[`Button(snapshot testing) blue Buttons 1`] = `
<button
  class="sc-fjdhpX egnjNl"
  data-styletype="primary"
  data-test="button"
  type="submit"
>
  <span
    class="sc-htoDjs cemEaf"
    color="white"
    data-test="span"
    size="14"
  >
    my primary button
  </span>
</button>
`;

exports[`Button(snapshot testing) blue Buttons 2`] = `
<button
  class="sc-fjdhpX egnjNl"
  data-styletype="secondary"
  data-test="button"
  type="submit"
>
  <span
    class="sc-htoDjs ghkjrx"
    color="blue"
    data-test="span"
    size="14"
  >
    my secoundrry button
  </span>
</button>
`;

exports[`Button(snapshot testing) blue Buttons 3`] = `
<button
  class="sc-fjdhpX egnjNl"
  data-styletype="tertiary"
  data-test="button"
  type="submit"
>
  <span
    class="sc-htoDjs deFOOE"
    color="darkBlue"
    data-test="span"
    size="14"
  >
    my tertiary button
  </span>
</button>
`;

exports[`Button(snapshot testing) darkblue Buttons(default) 1`] = `
<button
  class="sc-fjdhpX inSlDn"
  data-styletype="primary"
  data-test="button"
  type="submit"
>
  <span
    class="sc-htoDjs cemEaf"
    color="white"
    data-test="span"
    size="14"
  >
    my primary button
  </span>
</button>
`;

exports[`Button(snapshot testing) darkblue Buttons(default) 2`] = `
<button
  class="sc-fjdhpX inSlDn"
  data-styletype="secondary"
  data-test="button"
  type="submit"
>
  <span
    class="sc-htoDjs lmWkLj"
    color="darkblue"
    data-test="span"
    size="14"
  >
    my secoundrry button
  </span>
</button>
`;

exports[`Button(snapshot testing) darkblue Buttons(default) 3`] = `
<button
  class="sc-fjdhpX inSlDn"
  data-styletype="tertiary"
  data-test="button"
  type="submit"
>
  <span
    class="sc-htoDjs deFOOE"
    color="darkBlue"
    data-test="span"
    size="14"
  >
    my tertiary button
  </span>
</button>
`;

exports[`Button(snapshot testing) darkblue Buttons(default) 4`] = `
<button
  class="sc-fjdhpX gRhpjK"
  data-styletype="primary"
  data-test="button"
  type="submit"
>
  <span
    class="sc-htoDjs cemEaf"
    color="white"
    data-test="span"
    size="14"
  >
    my primary button
  </span>
</button>
`;

exports[`Button(snapshot testing) darkblue Buttons(default) 5`] = `
<button
  class="sc-fjdhpX gRhpjK"
  data-styletype="secondary"
  data-test="button"
  type="submit"
>
  <span
    class="sc-htoDjs deFOOE"
    color="darkBlue"
    data-test="span"
    size="14"
  >
    my secoundrry button
  </span>
</button>
`;

exports[`Button(snapshot testing) darkblue Buttons(default) 6`] = `
<button
  class="sc-fjdhpX gRhpjK"
  data-styletype="tertiary"
  data-test="button"
  type="submit"
>
  <span
    class="sc-htoDjs deFOOE"
    color="darkBlue"
    data-test="span"
    size="14"
  >
    my tertiary button
  </span>
</button>
`;

exports[`Button(snapshot testing) disabled Buttons 1`] = `
<button
  class="sc-fjdhpX knqIge"
  data-styletype="primary"
  data-test="button"
  disabled=""
  type="submit"
>
  <i
    class="sc-jTzLTM eQMsAa new-icon-watch-later sc-jzJRlG bWCExS"
    color="white"
    data-test="icon"
  />
  <span
    class="sc-htoDjs cemEaf"
    color="white"
    data-test="span"
    size="14"
  >
    my blue iconic disabled primary button
  </span>
</button>
`;

exports[`Button(snapshot testing) disabled Buttons 2`] = `
<button
  class="sc-fjdhpX CCdtV"
  data-styletype="secondary"
  data-test="button"
  disabled=""
  type="submit"
>
  <span
    class="sc-htoDjs dJtNTe"
    color="red"
    data-test="span"
    size="14"
  >
    my red disabled secoundrry button
  </span>
</button>
`;

exports[`Button(snapshot testing) disabled Buttons 3`] = `
<button
  class="sc-fjdhpX bfMZDe"
  data-styletype="tertiary"
  data-test="button"
  disabled=""
  type="submit"
>
  <span
    class="sc-htoDjs deFOOE"
    color="darkBlue"
    data-test="span"
    size="14"
  >
    my disabled tertiary button
  </span>
</button>
`;

exports[`Button(snapshot testing) disabled Buttons 4`] = `
<button
  class="sc-fjdhpX bfMZDe"
  data-styletype="primary"
  data-test="button"
  disabled=""
  type="submit"
>
  <span
    class="sc-htoDjs cemEaf"
    color="white"
    data-test="span"
    size="14"
  >
    my disabled primary linked-button
  </span>
</button>
`;

exports[`Button(snapshot testing) full-width button 1`] = `
<button
  class="sc-fjdhpX NUgrM"
  data-styletype="primary"
  data-test="button"
  type="submit"
>
  <span
    class="sc-htoDjs cemEaf"
    color="white"
    data-test="span"
    size="14"
  >
    my wide button
  </span>
</button>
`;

exports[`Button(snapshot testing) green Buttons 1`] = `
<button
  class="sc-fjdhpX bZBVSv"
  data-styletype="primary"
  data-test="button"
  type="submit"
>
  <span
    class="sc-htoDjs cemEaf"
    color="white"
    data-test="span"
    size="14"
  >
    my primary button
  </span>
</button>
`;

exports[`Button(snapshot testing) green Buttons 2`] = `
<button
  class="sc-fjdhpX bZBVSv"
  data-styletype="secondary"
  data-test="button"
  type="submit"
>
  <span
    class="sc-htoDjs fcTmNH"
    color="green"
    data-test="span"
    size="14"
  >
    my secoundrry button
  </span>
</button>
`;

exports[`Button(snapshot testing) green Buttons 3`] = `
<button
  class="sc-fjdhpX bZBVSv"
  data-styletype="tertiary"
  data-test="button"
  type="submit"
>
  <span
    class="sc-htoDjs deFOOE"
    color="darkBlue"
    data-test="span"
    size="14"
  >
    my tertiary button
  </span>
</button>
`;

exports[`Button(snapshot testing) linked Buttons 1`] = `
<a
  class="sc-cSHVUG iEZwKe"
  href="/avatar"
  target="_self"
>
  <button
    class="sc-fjdhpX gRhpjK"
    data-styletype="primary"
    data-test="button"
    type="submit"
  >
    <span
      class="sc-htoDjs cemEaf"
      color="white"
      data-test="span"
      size="14"
    >
      my simplest linked button
    </span>
  </button>
</a>
`;

exports[`Button(snapshot testing) linked Buttons 2`] = `
<a
  class="sc-cSHVUG iEZwKe"
  href="https://sciencebusiness.net/categories/dfgdfg"
  target="_blank"
>
  <button
    class="sc-fjdhpX gRhpjK"
    data-styletype="secondary"
    data-test="button"
    type="submit"
  >
    <i
      class="sc-jTzLTM lpeMqL new-icon-watch-later sc-jzJRlG bWCExS"
      color="darkBlue"
      data-test="icon"
    />
    <span
      class="sc-htoDjs deFOOE"
      color="darkBlue"
      data-test="span"
      size="14"
    >
      my secoundrry external-linked button
    </span>
  </button>
</a>
`;

exports[`Button(snapshot testing) red Buttons 1`] = `
<button
  class="sc-fjdhpX fiXIpM"
  data-styletype="primary"
  data-test="button"
  type="submit"
>
  <span
    class="sc-htoDjs cemEaf"
    color="white"
    data-test="span"
    size="14"
  >
    my primary button
  </span>
</button>
`;

exports[`Button(snapshot testing) red Buttons 2`] = `
<button
  class="sc-fjdhpX fiXIpM"
  data-styletype="secondary"
  data-test="button"
  type="submit"
>
  <span
    class="sc-htoDjs dJtNTe"
    color="red"
    data-test="span"
    size="14"
  >
    my secoundrry button
  </span>
</button>
`;

exports[`Button(snapshot testing) red Buttons 3`] = `
<button
  class="sc-fjdhpX fiXIpM"
  data-styletype="tertiary"
  data-test="button"
  type="submit"
>
  <span
    class="sc-htoDjs deFOOE"
    color="darkBlue"
    data-test="span"
    size="14"
  >
    my tertiary button
  </span>
</button>
`;

exports[`Button(snapshot testing) yellow Buttons 1`] = `
<button
  class="sc-fjdhpX gWZhNJ"
  data-styletype="primary"
  data-test="button"
  type="submit"
>
  <span
    class="sc-htoDjs cemEaf"
    color="white"
    data-test="span"
    size="14"
  >
    my primary button
  </span>
</button>
`;

exports[`Button(snapshot testing) yellow Buttons 2`] = `
<button
  class="sc-fjdhpX gWZhNJ"
  data-styletype="secondary"
  data-test="button"
  type="submit"
>
  <span
    class="sc-htoDjs ijahRT"
    color="yellow"
    data-test="span"
    size="14"
  >
    my secoundrry button
  </span>
</button>
`;

exports[`Button(snapshot testing) yellow Buttons 3`] = `
<button
  class="sc-fjdhpX gWZhNJ"
  data-styletype="tertiary"
  data-test="button"
  type="submit"
>
  <span
    class="sc-htoDjs deFOOE"
    color="darkBlue"
    data-test="span"
    size="14"
  >
    my tertiary button
  </span>
</button>
`;
